--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,10 @@ body{
     font-size: 15px;
     margin-top: 10px;
 }
+.login{
+    margin: 5px;
+    padding: 5px;
+}
 .restaurant-container{
     display: flex;
     flex-wrap: wrap;
