--- a/styles.css
+++ b/styles.css
@@ -97,3 +97,9 @@ body{
     margin: 10px;
     padding: 5px;
 }
+.rest-delivery-logo{
+    height: 17px;
+    /* margin-top: px; */
+    position: relative;
+    top: 3px
+}
