--- a/styles.css
+++ b/styles.css
@@ -103,3 +103,55 @@ body{
     position: relative;
     top: 3px
 }
+.rest-menu-list{
+    display: flex;
+    justify-content: space-between;
+}
+.rest-info-img{
+    width: 110px;
+    height: 100px;
+    border-radius: 5px;
+    object-fit: cover;
+    margin-left: 20px;
+    
+}
+
+.restaurant-info-main-div{
+    width: 70%;
+    /* border: 1px solid black; */
+    margin: 50px auto;
+}
+.hr-line{
+    margin: 30px 0px;
+}
+.veg-logo{
+    width: 15px;
+}
+.nonveg-logo{
+    width: 20px;
+}
+.item-desc{
+    color: #9EA0A8;
+    font-weight: 100;
+    font-size: 14px;
+    letter-spacing: 0.6;
+}
+.item-name{
+    font-weight:600;
+}
+.recommended-item{
+    margin: 30px 0;
+}
+.rest-details{
+    color: #9EA0A8;
+    font-size: 13px;
+    margin: 5px 0px;
+    letter-spacing: 0.6;
+}
+.rest-name{
+    margin-bottom: 10px;
+}
+a{
+    text-decoration: none;
+    color: black;
+}
