--- a/styles.css
+++ b/styles.css
@@ -158,3 +158,25 @@ a{
 .user-info{
     border: 1px solid black;
 }
+
+.rest-shim1{
+    width: 350px;
+    height: 200px;
+    background-color: #f0f0f0;
+    margin: 50px 200px 30px;
+}
+.rest-shim2{
+    width: 180px;
+    height: 10px;
+    background-color: #f0f0f0;
+    margin: 0px 200px 20px;
+}
+
+.rest-shim3{
+    width: 150px;
+    height: 10px;
+    background-color: #f0f0f0;
+    margin: 0px 200px 0px;
+}
+
+
